--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Weather Extension",
+  "description": "Daily weather",
+  "version": "1.0",
+  "manifest_version": 3,
   "icons": [
     {
       "src": "favicon.ico",
@@ -21,5 +23,9 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "permissions": [
+    "geolocation",
+    "notifications"
+  ]
 }
